Изменения в шаблоне калькулятора, небольшие визуальные правки

--- a/var/html/calk.html
+++ b/var/html/calk.html
@@ -72,7 +72,10 @@
 							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
 						</select>
 					</div>
-					<div class="search_box">
+					<div class="box_checkbox">
+						<div class="checkbox checkbox_on"></div> КОЛИЧЕСТВО ВОДИТЕЛЕЙ НЕ ОГРАНИЧЕНО
+					</div>
+					<div class="search_box" style="display:none;">
 						<table cellpadding="0" cellspacing="0" class="link_search_table">
 							<tr>
 								<th>
@@ -145,544 +148,17 @@
 					</div>
 				</div>
 				<div class="calk_content" id="tabs_2">
-					<div class="select_style">
-						<select class="sel80" id="country" name="country" tabindex="2">
-							<option value="1">ауди</option>
-							<option value="2">опел</option>
-							<option value="3">опел</option>
-							<option value="4">опел</option>
-							<option value="5">опел</option>
-							<option value="6">опел</option>
-							<option value="7">опел</option>
-							<option value="8">опел</option>
-							<option value="9">опел</option>
-							<option value="10">опел</option>
-							<option value="11">опел</option>
-							<option value="12">опел</option>
-							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
-						</select>
-					</div>
-					<div class="search_box">
-						<table cellpadding="0" cellspacing="0" class="link_search_table">
-							<tr>
-								<th>
-									Год выпуска
-								</th>
-								<td>
-									<a href="#">2011</a>
-									<a href="#">2010</a>
-									<a href="#">2009</a>
-									<a href="#">2008</a>
-									<a href="#">2007</a>
-									<a href="#">2006</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Модель
-								</th>
-								<td>
-									<a href="#">Berlingo</a>
-									<a href="#">C2</a>
-									<a href="#">C3</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-						</table>
-					</div>
+					
 				</div>
 				<div class="calk_content" id="tabs_3">
-					<div class="select_style">
-						<select class="sel80" id="country" name="country" tabindex="2">
-							<option value="1">ауди</option>
-							<option value="2">опел</option>
-							<option value="3">опел</option>
-							<option value="4">опел</option>
-							<option value="5">опел</option>
-							<option value="6">опел</option>
-							<option value="7">опел</option>
-							<option value="8">опел</option>
-							<option value="9">опел</option>
-							<option value="10">опел</option>
-							<option value="11">опел</option>
-							<option value="12">опел</option>
-							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
-						</select>
-					</div>
-					<div class="search_box">
-						<table cellpadding="0" cellspacing="0" class="link_search_table">
-							<tr>
-								<th>
-									Год выпуска
-								</th>
-								<td>
-									<a href="#">2011</a>
-									<a href="#">2010</a>
-									<a href="#">2009</a>
-									<a href="#">2008</a>
-									<a href="#">2007</a>
-									<a href="#">2006</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Модель
-								</th>
-								<td>
-									<a href="#">Berlingo</a>
-									<a href="#">C2</a>
-									<a href="#">C3</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-						</table>
-					</div>
 				</div>
 				<div class="calk_content" id="tabs_4">
-					<div class="select_style">
-						<select class="sel80" id="country" name="country" tabindex="2">
-							<option value="1">ауди</option>
-							<option value="2">опел</option>
-							<option value="3">опел</option>
-							<option value="4">опел</option>
-							<option value="5">опел</option>
-							<option value="6">опел</option>
-							<option value="7">опел</option>
-							<option value="8">опел</option>
-							<option value="9">опел</option>
-							<option value="10">опел</option>
-							<option value="11">опел</option>
-							<option value="12">опел</option>
-							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
-						</select>
-					</div>
-					<div class="search_box">
-						<table cellpadding="0" cellspacing="0" class="link_search_table">
-							<tr>
-								<th>
-									Год выпуска
-								</th>
-								<td>
-									<a href="#">2011</a>
-									<a href="#">2010</a>
-									<a href="#">2009</a>
-									<a href="#">2008</a>
-									<a href="#">2007</a>
-									<a href="#">2006</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Модель
-								</th>
-								<td>
-									<a href="#">Berlingo</a>
-									<a href="#">C2</a>
-									<a href="#">C3</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-						</table>
-					</div>
 				</div>
 				<div class="calk_content" id="tabs_5">
-					<div class="select_style">
-						<select class="sel80" id="country" name="country" tabindex="2">
-							<option value="1">ауди</option>
-							<option value="2">опел</option>
-							<option value="3">опел</option>
-							<option value="4">опел</option>
-							<option value="5">опел</option>
-							<option value="6">опел</option>
-							<option value="7">опел</option>
-							<option value="8">опел</option>
-							<option value="9">опел</option>
-							<option value="10">опел</option>
-							<option value="11">опел</option>
-							<option value="12">опел</option>
-							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
-						</select>
-					</div>
-					<div class="search_box">
-						<table cellpadding="0" cellspacing="0" class="link_search_table">
-							<tr>
-								<th>
-									Год выпуска
-								</th>
-								<td>
-									<a href="#">2011</a>
-									<a href="#">2010</a>
-									<a href="#">2009</a>
-									<a href="#">2008</a>
-									<a href="#">2007</a>
-									<a href="#">2006</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Модель
-								</th>
-								<td>
-									<a href="#">Berlingo</a>
-									<a href="#">C2</a>
-									<a href="#">C3</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-						</table>
-					</div>
 				</div>
 				<div class="calk_content" id="tabs_6">
-					<div class="select_style">
-						<select class="sel80" id="country" name="country" tabindex="2">
-							<option value="1">ауди</option>
-							<option value="2">опел</option>
-							<option value="3">опел</option>
-							<option value="4">опел</option>
-							<option value="5">опел</option>
-							<option value="6">опел</option>
-							<option value="7">опел</option>
-							<option value="8">опел</option>
-							<option value="9">опел</option>
-							<option value="10">опел</option>
-							<option value="11">опел</option>
-							<option value="12">опел</option>
-							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
-						</select>
-					</div>
-					<div class="search_box">
-						<table cellpadding="0" cellspacing="0" class="link_search_table">
-							<tr>
-								<th>
-									Год выпуска
-								</th>
-								<td>
-									<a href="#">2011</a>
-									<a href="#">2010</a>
-									<a href="#">2009</a>
-									<a href="#">2008</a>
-									<a href="#">2007</a>
-									<a href="#">2006</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Модель
-								</th>
-								<td>
-									<a href="#">Berlingo</a>
-									<a href="#">C2</a>
-									<a href="#">C3</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-						</table>
-					</div>
 				</div>
 				<div class="calk_content" id="tabs_7">
-					<div class="select_style">
-						<select class="sel80" id="country" name="country" tabindex="2">
-							<option value="1">ауди</option>
-							<option value="2">опел</option>
-							<option value="3">опел</option>
-							<option value="4">опел</option>
-							<option value="5">опел</option>
-							<option value="6">опел</option>
-							<option value="7">опел</option>
-							<option value="8">опел</option>
-							<option value="9">опел</option>
-							<option value="10">опел</option>
-							<option value="11">опел</option>
-							<option value="12">опел</option>
-							<option selected="selected" value="1000">ВЫБЕРЕТЕ АВТОМОБИЛЬ...</option>
-						</select>
-					</div>
-					<div class="search_box">
-						<table cellpadding="0" cellspacing="0" class="link_search_table">
-							<tr>
-								<th>
-									Год выпуска
-								</th>
-								<td>
-									<a href="#">2011</a>
-									<a href="#">2010</a>
-									<a href="#">2009</a>
-									<a href="#">2008</a>
-									<a href="#">2007</a>
-									<a href="#">2006</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-									<a href="#">2011</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Модель
-								</th>
-								<td>
-									<a href="#">Berlingo</a>
-									<a href="#">C2</a>
-									<a href="#">C3</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-							<tr>
-								<th>
-									Руль
-								</th>
-								<td>
-									<a href="#">Слева</a>
-									<a href="#">Справа</a>
-									<a href="#">Поцентру</a>
-								</td>
-							</tr>
-						</table>
-					</div>
 				</div>
 				
 				<script>
